--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Techycetera</title>
     <link rel="icon" type="image/x-icon"
         href="https://scontent.fsgn8-2.fna.fbcdn.net/v/t39.30808-1/277173343_155140593627380_8913989823214468483_n.jpg?stp=dst-jpg_p200x200&_nc_cat=110&ccb=1-5&_nc_sid=1eb0c7&_nc_ohc=w4GWsDPmHuYAX-eBpvi&_nc_ht=scontent.fsgn8-2.fna&oh=00_AT8kngr4aViajccF5ZQvRlURQUpL5ej6pFRJZbjs4uJdJw&oe=624E856D">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -376,7 +376,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt-16 text-center">
-                            <img src="./assets/img/place/LAB211.jpg" alt="newyork" class="place-img">
+                            <img src="./assets/img/place/LAB211(2).png" alt="newyork" class="place-img">
                             <div class="place-body">
 
                                 <h2 class="place-heading ">LAB211</h2>
@@ -418,11 +418,11 @@
                         </div>
 
                         <div class="col col-third s-col-full mt-16 text-center">
-                            <img src="./assets/img/place/tuyensinh.jpg" alt="newyork" class="place-img">
+                            <img src="./assets/img/place/GianHangCLB.jpg" alt="newyork" class="place-img">
                             <div class="place-body">
 
                                 <h2 class="place-heading">Gian hàng CLB</h2>
-                                <p class="place-time">Ngày hội tuyển sinh Đại học FPT Cần Thơ</p>
+                                <p class="place-time">Ngày hội tuyển sinh tại FPT CT</p>
                                 <a href="https://www.facebook.com/techycetera/photos/pcb.153085460499560/153085017166271"
                                     class="place-regis s-full-width">Xem thêm</a>
 
@@ -444,10 +444,10 @@
 
 
                         <div class="col col-third s-col-full mt-16 text-center">
-                            <img src="./assets/img/place/MAE101.png" alt="newyork" class="place-img">
+                            <img src="./assets/img/place/MAE101(1).png" alt="newyork" class="place-img">
                             <div class="place-body">
 
-                                <h2 class="place-heading">Ôn tập Progress Test 3 - MAE101</h2>
+                                <h2 class="place-heading">Ôn tập PE3-MAE101</h2>
                                 <p class="place-time">Study with Techycetera</p>
                                 <a href="https://www.facebook.com/techycetera/photos/a.106118248529615/118726823935424/"
                                     class="place-regis s-full-width">Xem thêm</a>
@@ -456,7 +456,7 @@
                         </div>
 
                         <div class="col col-third s-col-full mt-16 text-center">
-                            <img src="./assets/img/place/PRF192.png" alt="newyork" class="place-img">
+                            <img src="./assets/img/place/PRF192(1).png" alt="newyork" class="place-img">
                             <div class="place-body">
 
                                 <h2 class="place-heading">Giải đề PE PRF192</h2>
